Fixed issue with nav covering parts of components

--- a/src/App.css
+++ b/src/App.css
@@ -56,8 +56,8 @@ h1.title {
   font-size: 3rem;
   color: #444054;
   position: absolute;
-  top: 50;
-  left: 50;
+  top: 50%;
+  left: 50%;
 }
 
 Container.timesheet {
